@@ -68,7 +68,6 @@ div div.thumbcaption {
 }
 
 div.magnify,
-#div.townBox,
 #p-logo {
 	left: auto;
 	right: 0;
@@ -133,14 +132,6 @@ div.tright, div.floatright, table.floatright {
 }
 div.tleft, div.floatleft, table.floatleft {
 	clear: left;
-}
-div.townBox {
-	margin-left: 0;
-	margin-right: 1em;
-}
-div.townBox dl dd {
-	margin-left: 0;
-	margin-right: 1.1em;
 }
 #p-personal li {
 	margin-left: 0;
