@@ -387,6 +387,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14537) Change interwiki name for Old Church Slavonic (cu)
 * (bug 14583) Fix regression in recent changes "limit to certain categories."
 * (bug 14515) HTML nesting cleanup on edit form
+* (bug 14647) Removed unused 'townBox' CSS classes
 
 === API changes in 1.13 ===
 
